Sqservices 1436 improve security of 2nd factor authentication (#2522)

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -282,5 +282,8 @@ data:
       {{- if .setCustomerExtensions }}
       setCustomerExtensions: {{ toYaml .setCustomerExtensions | nindent 8 }}
       {{- end }}
+      {{- if .set2FACodeGenerationDelaySecs }}
+      set2FACodeGenerationDelaySecs: {{ .set2FACodeGenerationDelaySecs }}
+      {{- end }}
     {{- end }}
   {{- end }}
