charts/cannon: fix syntax for manually setting tls certificate

--- a/charts/cannon/templates/nginz-certificate-secret.yaml
+++ b/charts/cannon/templates/nginz-certificate-secret.yaml
@@ -10,6 +10,6 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: kubernetes.io/tls
 data:
-  tls.crt: {{ .Values.secrets.nginz.tls.crt }}
-  tls.key: {{ .Values.secrets.nginz.tls.key }}
+  tls.crt: {{ .Values.secrets.nginz.tls.crt | b64enc | quote }}
+  tls.key: {{ .Values.secrets.nginz.tls.key | b64enc | quote }}
 {{- end }}
