charts/*: default logFormat=StructuredJSON format
This format was introduced in #1951 and #1959.

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -10,8 +10,7 @@ metadata:
 data:
   {{- with .Values.config }}
   brig.yaml: |
-    logNetStrings: True # log using netstrings encoding:
-                        # http://cr.yp.to/proto/netstrings.txt
+    logNetStrings: {{ .logNetStrings }}
     logFormat: {{ .logFormat }}
     logLevel: {{ .logLevel }}
 
