--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -17,6 +17,8 @@ resources:
     cpu: "500m"
 config:
   logLevel: Info
+  logFormat: StructuredJSON
+  logNetStrings: false
   cassandra:
     host: aws-cassandra
   redis:
