--- a/charts/proxy/templates/configmap.yaml
+++ b/charts/proxy/templates/configmap.yaml
@@ -4,8 +4,9 @@ metadata:
   name: "proxy"
 data:
   proxy.yaml: |
-    logNetStrings: True # log using netstrings encoding: http://cr.yp.to/proto/netstrings.txt
+    logFormat: {{ .Values.config.logFormat }}
     logLevel: {{ .Values.config.logLevel }}
+    logNetStrings: {{ .Values.config.logNetStrings }}
 
     host: 0.0.0.0
     port: {{ .Values.service.internalPort }}
