--- a/charts/spar/values.yaml
+++ b/charts/spar/values.yaml
@@ -21,6 +21,8 @@ config:
   richInfoLimit: 5000
   maxScimTokens: 0
   logLevel: Info
+  logFormat: StructuredJSON
+  logNetStrings: false
   maxttlAuthreq: 7200
   maxttlAuthresp: 7200
   proxy: {}
