--- a/charts/proxy/values.yaml
+++ b/charts/proxy/values.yaml
@@ -16,5 +16,7 @@ resources:
     memory: "512Mi"
     cpu: "500m"
 config:
-  logLevel: Debug
+  logLevel: Info
+  logFormat: StructuredJSON
+  logNetStrings: false
   proxy: {}
