Added TTL to endpoint responses on feature status.
Small clean-up.

Better handle ttl = 0.

Updated golden tests.

Improve handling TTL to avoid repeating code

Updated remaining golden tests.

This file shouldn't change in this PR!

Update libs/wire-api/src/Wire/API/Team/Feature.hs

Remove rule about deprecated hpack.yaml files.

I'll try to remove hpack in a separate PR.

Added default value to integration.yaml.

Added default vallue to chart.

Updated helm charts for CI testing.

Cleaned up parsers.

Reverted change that broke property test.

Removed RSA private keys.

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -38,6 +38,7 @@ config:
             enforceAppLock: false
             inactivityTimeoutSecs: 60
           status: enabled
+          ttl: unlimited
       classifiedDomains:
         config:
           domains: []
@@ -45,14 +46,17 @@ config:
       conferenceCalling:
         defaults:
           status: enabled
+          ttl: unlimited
       conversationGuestLinks:
         defaults:
           lockStatus: unlocked
           status: enabled
+          ttl: unlimited
       fileSharing:
         defaults:
           lockStatus: unlocked
           status: enabled
+          ttl: unlimited
       legalhold: disabled-by-default
       mls:
         defaults:
@@ -71,10 +75,12 @@ config:
             enforcedTimeoutSeconds: 0
           lockStatus: unlocked
           status: enabled
+          ttl: unlimited
       sndFactorPasswordChallenge:
         defaults:
           lockStatus: locked
           status: disabled
+          ttl: unlimited
       sso: disabled-by-default
       teamSearchVisibility: disabled-by-default
       validateSAMLemails:
