--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -66,19 +66,20 @@ library:
   - mtl
   - pem >=0.2
   - polysemy
-  - protobuf >=0.2
   - proto-lens
+  - protobuf >=0.2
   - QuickCheck >=2.14
   - quickcheck-instances >=0.3.16
   - random >=1.2.0
   - resourcet
+  - schema-profunctor
+  - scientific
   - servant-client
   - servant-client-core
   - servant-conduit
   - servant-multipart
   - servant-server
   - servant-swagger
-  - schema-profunctor
   - singletons
   - sop-core
   - string-conversions
@@ -92,13 +93,13 @@ library:
   - utf8-string
   - uuid >=1.3
   - vector >= 0.12
-  - wire-message-proto-lens
-  - x509
   - wai
   - wai-extra
   - wai-utilities
   - wai-websockets
   - websockets
+  - wire-message-proto-lens
+  - x509
 
 tests:
   wire-api-tests:
