--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -228,6 +228,7 @@ library
     , resourcet
     , saml2-web-sso
     , schema-profunctor
+    , scientific
     , servant
     , servant-client
     , servant-client-core
