Minor fixes in helm charts (#2563)
* charts/brig: Fix default brandLabelUrl and remove brandLabel

brandLabel is unused

* charts/gundeck: Remove aws.connectionLimit

It is unused

* charts/galley: Fix typo in settings.featureFlags.validateSAMLEmails

* charts/galley: Honour .setttings.httpPoolSize

* Add changelog

* charts/nginz: Ensure rate limiting isn't commented out

* charts/nginz: Rate limit SSO endpoints less

* charts/galley: Set default value for settings.httpPoolSize

* charts/{nginz,cannon}: Allow overriding rate limit per user and addr

* charts/nginz: Increase burst from 5 to 10 for reqs_per_addr rate limiting

--- a/charts/brig/values.yaml
+++ b/charts/brig/values.yaml
@@ -39,8 +39,7 @@ config:
       templateBranding:
         brand: Wire
         brandUrl: https://wire.com
-        brandLabel: wire.com
-        brandLabelUrl: https://wire.com
+        brandLabelUrl: wire.com
         brandLogoUrl: https://wire.com/p/img/email/logo-email-black.png
         brandService: Wire Service Provider
         copyright: © WIRE SWISS GmbH
