A type-safe usage of a timeout in proposals

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -197,6 +197,7 @@ library
     , cryptonite
     , currency-codes >=2.0
     , data-default >=0.5
+    , data-timeout
     , either
     , enclosed-exceptions >=1.0
     , errors >=2.0
