--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -47,6 +47,7 @@ library:
   - cryptonite
   - currency-codes >=2.0
   - data-default >=0.5
+  - data-timeout
   - either
   - enclosed-exceptions >=1.0
   - errors >=2.0
