--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -56,6 +56,7 @@ nginx_conf:
   - /search/top
   - /search/common
 
+  default_client_max_body_size: "256k"
   rate_limit_reqs_per_user: "10r/s"
   rate_limit_reqs_per_addr: "5r/m"
 
@@ -492,7 +493,6 @@ nginx_conf:
       - all
     spar:
     - path: /identity-providers
-      max_body_size: 256k
       envs:
       - all
     - path: /i/sso
