charts/coturn: add TLS support.
This commit adds options to expose the coturn control plane over TLS, with
optional cert-manager integration. Additionally, when operating with TLS
enabled, it adds a sidecar process to the coturn pods so that coturn is
signalled to reload certificates when they change on disk.

--- a/charts/coturn/templates/configmap-coturn-conf-template.yaml
+++ b/charts/coturn/templates/configmap-coturn-conf-template.yaml
@@ -7,10 +7,17 @@ metadata:
 
 data:
   coturn.conf.template: |
-    ## disable (d)tls control plane; don't permit relaying tcp connections.
-    no-tls
+    ## disable dtls control plane; don't permit relaying tcp connections.
     no-dtls
     no-tcp-relay
+
+    ## tls handling
+    {{- if .Values.tls.enabled }}
+    cert=/secrets-tls/tls.crt
+    pkey=/secrets-tls/tls.key
+    {{- else }}
+    no-tls
+    {{- end }}
 
     ## don't turn on coturn's cli.
     no-cli
