Test key package expiration

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -537,6 +537,7 @@ executable brig-integration
     , temporary >=1.2.1
     , text
     , time >=1.5
+    , timeout
     , tinylog
     , transformers
     , types-common >=0.3
