--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -45,9 +45,9 @@ library
       Brig.Calling
       Brig.Calling.API
       Brig.Calling.Internal
+      Brig.CanonicalInterpreter
       Brig.Code
       Brig.Data.Activation
-      Brig.Data.Blacklist
       Brig.Data.Client
       Brig.Data.Connection
       Brig.Data.Instances
@@ -58,6 +58,10 @@ library
       Brig.Data.User
       Brig.Data.UserKey
       Brig.Data.UserPendingActivation
+      Brig.Effects.BlacklistPhonePrefixStore
+      Brig.Effects.BlacklistPhonePrefixStore.Cassandra
+      Brig.Effects.BlacklistStore
+      Brig.Effects.BlacklistStore.Cassandra
       Brig.Effects.Delay
       Brig.Effects.SFT
       Brig.Email
