docs: merge nix code into toplevel
For now, this introduces a second nixpkgs pin to the toplevel
nix/sources.json, and exposes the doc environment as a `docsEnv`
attribute.

The binaries in there are added to $PATH by direnv.

As Dockerfile can't copy files from outside its folder, and the only
purpose of it was to provide a binaries to build as well (which we can
just provide via Nix), it's removed.

There's now an additional `.envrc` in `docs/`, adding doc-related
tooling to $PATH whenever the `docs` folder is entered.

Building can happen via a a top-level `docs` attribute, without the need
for intermediate Docker containers.

This removes the necessity for a bunch of Makefile rules and
intermediate container images, as well as additional CI recipies - we
can just build the nix attribute from GH Actions.

The GH actions pipeline is extended to upload/update docs in our docs
bucket. Permissions for this come via OIDC and the GitHub actions
tokens.

The documentation is updated to match the new state of things.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 on:
  pull_request:
  push:
-   branches: [master]
+   branches: [master, develop]
 
 jobs:
   build-dev-env:
@@ -28,3 +28,34 @@ jobs:
        run: nix-build --no-out-link ./nix -A devEnv
      - name: Install the wire-server-direnv
        run: nix-env -if ./nix -A devEnv
+  build-docs:
+    name: Build docs
+    environment: cachix
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+     - uses: actions/checkout@v2
+       with:
+         submodules: true
+     - uses: cachix/install-nix-action@v14.1
+     - uses: cachix/cachix-action@v10
+       with:
+         name: wire-server
+         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+     - name: Build docs
+       run: nix-build --no-out-link ./nix -A docs
+     - name: Configure AWS credentials
+       if: ${{ github.ref == 'refs/heads/develop' }}
+       uses: aws-actions/configure-aws-credentials@v1
+       with:
+         role-to-assume: arn:aws:iam::093205192929:role/gh-actions-wire-server
+         aws-region: eu-west-1
+     - name: Deploy docs
+       if: ${{ github.ref == 'refs/heads/develop' }}
+       run: |
+         docs=$(nix-build --no-out-link ./nix -A docs)
+         aws s3 sync $docs/html s3://origin-docs.wire.com/
+         aws s3 cp $docs/pdf/wire_federation.pdf s3://origin-docs.wire.com/main.pdf
