--- a/docs/.envrc
+++ b/docs/.envrc
@@ -1,10 +1,8 @@
-env="$(nix-build $PWD/nix/default.nix -A env)"
+source_up
 
-PATH_add "${env}/bin"
+docs_env="$(nix-build $PWD/../nix/default.nix -A docsEnv)"
 
-# source .profile from `$env`.
-# This is only used to set things interpolated by nix. All static things should live inside here.
-[[ -f "${env}/.profile" ]] && source_env "${env}/.profile"
+PATH_add "${docs_env}/bin"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
