--- a/charts/galley/templates/deployment.yaml
+++ b/charts/galley/templates/deployment.yaml
@@ -25,13 +25,17 @@ spec:
       annotations:
         # An annotation of the configmap checksum ensures changes to the configmap cause a redeployment upon `helm upgrade`
         checksum/configmap: {{ include (print .Template.BasePath "/configmap.yaml") . | sha256sum }}
-        checksum/secret: {{ include (print .Template.BasePath "/secret.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print .Template.BasePath "/aws-secret.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print .Template.BasePath "/mls-secret.yaml") . | sha256sum }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       volumes:
         - name: "galley-config"
           configMap:
             name: "galley"
+        - name: "galley-secrets"
+          secret:
+            secretName: "galley-mls"
       containers:
         - name: galley
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -39,17 +43,19 @@ spec:
           volumeMounts:
           - name: "galley-config"
             mountPath: "/etc/wire/galley/conf"
+          - name: "galley-secrets"
+            mountPath: "/etc/wire/galley/secrets"
           env:
           {{- if hasKey .Values.secrets "awsKeyId" }}
           - name: AWS_ACCESS_KEY_ID
             valueFrom:
               secretKeyRef:
-                name: galley
+                name: galley-aws
                 key: awsKeyId
           - name: AWS_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
-                name: galley
+                name: galley-aws
                 key: awsSecretKey
           {{- end }}
           - name: AWS_REGION
