--- a/charts/galley/templates/aws-secret.yaml
+++ b/charts/galley/templates/aws-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: galley
+  name: galley-aws
   labels:
     app: galley
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
