Store MLS private keys in a map

--- a/charts/galley/templates/mls-secret.yaml
+++ b/charts/galley/templates/mls-secret.yaml
@@ -10,5 +10,5 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.mlsPrivateKeyContents }}
-  mls.key: {{ .Values.mlsPrivateKeyContents | b64enc | quote }}
+  ed25519.key: {{ .Values.mlsPrivateKeyContents | b64enc | quote }}
   {{- end -}}
