--- a/deploy/services-demo/conf/galley.demo.yaml
+++ b/deploy/services-demo/conf/galley.demo.yaml
@@ -28,6 +28,8 @@ settings:
   conversationCodeURI: https://127.0.0.1/conversation-join/
   concurrentDeletionEvents: 1024
   deleteConvThrottleMillis: 0
+  mlsPrivateKeyPaths:
+    ed25519: conf/ed25519.key
 
   featureFlags:  # see #RefConfigOptions in `/docs/reference`
     sso: disabled-by-default
