--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -59,7 +59,8 @@ data:
       enableIndexedBillingTeamMembers: {{ .settings.enableIndexedBillingTeamMembers }}
       {{- end }}
       federationDomain: {{ .settings.federationDomain }}
-      mlsPrivateKeyPath: "/etc/wire/galley/secrets/mls.key"
+      mlsPrivateKeyPaths:
+        ed25519: "/etc/wire/galley/secrets/ed25519.key"
       {{- if .settings.featureFlags }}
       featureFlags:
         sso: {{ .settings.featureFlags.sso }}
