--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -670,6 +670,7 @@ test-suite wire-api-tests
     , aeson-pretty
     , aeson-qq
     , base
+    , binary
     , bytestring
     , bytestring-arbitrary     >=0.1.3
     , bytestring-conversion
