for cannon and backoffice, drop using TLS_CHACHA20_POLY1305_SHA256 when using TLS 1.3

--- a/charts/cannon/values.yaml
+++ b/charts/cannon/values.yaml
@@ -46,7 +46,7 @@ nginx_conf:
     # As a Wire employee, for Wire-internal discussions and context see
     # * https://wearezeta.atlassian.net/browse/FS-33
     # * https://wearezeta.atlassian.net/browse/FS-444
-    ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384"
+    ciphers: "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384"
 
   # The origins from which we allow CORS requests. These are combined with
   # 'external_env_domain' to form a full url
