--- a/charts/backoffice/templates/configmap.yaml
+++ b/charts/backoffice/templates/configmap.yaml
@@ -132,7 +132,8 @@ data:
         # As a Wire employee, for Wire-internal discussions and context see
         # * https://wearezeta.atlassian.net/browse/FS-33
         # * https://wearezeta.atlassian.net/browse/FS-444
-        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384'; # redundant/unused due to the line below, but needed to keep nginx/openssl config parsing happy.
+        ssl_conf_command Ciphersuites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
         server {
           listen {{ .Values.service.internalPort }};
 
