--- a/charts/backoffice/templates/configmap.yaml
+++ b/charts/backoffice/templates/configmap.yaml
@@ -133,7 +133,7 @@ data:
         # * https://wearezeta.atlassian.net/browse/FS-33
         # * https://wearezeta.atlassian.net/browse/FS-444
         ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384'; # for TLS 1.2
-        ssl_conf_command Ciphersuites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384"; # for TLS 1.3
+        ssl_conf_command Ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384; # for TLS 1.3
         server {
           listen {{ .Values.service.internalPort }};
 
