--- a/libs/wire-api-federation/wire-api-federation.cabal
+++ b/libs/wire-api-federation/wire-api-federation.cabal
@@ -1,80 +1,83 @@
 cabal-version: 1.12
+name:          wire-api-federation
+version:       0.1.0
+synopsis:      The Wire server-to-server API for federation
+description:
+  Servant endpoints and types for implementing a Wire backend that can federate with others
 
-
-name:           wire-api-federation
-version:        0.1.0
-synopsis:       The Wire server-to-server API for federation
-description:    Servant endpoints and types for implementing a Wire backend that can federate with others
-category:       Web
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-copyright:      (c) 2020 Wire Swiss GmbH
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
+category:      Web
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+copyright:     (c) 2020 Wire Swiss GmbH
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 library
+  -- cabal-fmt: expand src
   exposed-modules:
-      Wire.API.Federation.API
-      Wire.API.Federation.API.Brig
-      Wire.API.Federation.API.Cargohold
-      Wire.API.Federation.API.Common
-      Wire.API.Federation.API.Galley
-      Wire.API.Federation.Client
-      Wire.API.Federation.Component
-      Wire.API.Federation.Domain
-      Wire.API.Federation.Endpoint
-      Wire.API.Federation.Error
-      Wire.API.Federation.Version
-  other-modules:
-      Paths_wire_api_federation
-  hs-source-dirs:
-      src
+    Wire.API.Federation.API
+    Wire.API.Federation.API.Brig
+    Wire.API.Federation.API.Cargohold
+    Wire.API.Federation.API.Common
+    Wire.API.Federation.API.Galley
+    Wire.API.Federation.Client
+    Wire.API.Federation.Component
+    Wire.API.Federation.Domain
+    Wire.API.Federation.Endpoint
+    Wire.API.Federation.Error
+    Wire.API.Federation.Version
+
+  other-modules:      Paths_wire_api_federation
+  hs-source-dirs:     src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
-      QuickCheck >=2.13
-    , aeson >=2.0.1.0
+      aeson                  >=2.0.1.0
     , async
-    , base >=4.6 && <5.0
+    , base                   >=4.6     && <5.0
     , bytestring
     , bytestring-conversion
     , case-insensitive
@@ -92,8 +95,9 @@ library
     , metrics-wai
     , mtl
     , network
+    , QuickCheck             >=2.13
     , schema-profunctor
-    , servant >=0.16
+    , servant                >=0.16
     , servant-client
     , servant-client-core
     , servant-server
@@ -102,82 +106,87 @@ library
     , streaming-commons
     , swagger2
     , template-haskell
-    , text >=0.11
-    , time >=1.8
+    , text                   >=0.11
+    , time                   >=1.8
     , time-manager
     , tls
     , transformers
     , types-common
     , wai-utilities
     , wire-api
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
 
 test-suite spec
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  type:               exitcode-stdio-1.0
+  main-is:            Main.hs
+
+  -- cabal-fmt: expand test
   other-modules:
-      Test.Wire.API.Federation.API.BrigSpec
-      Test.Wire.API.Federation.Golden.ConversationCreated
-      Test.Wire.API.Federation.Golden.ConversationUpdate
-      Test.Wire.API.Federation.Golden.GoldenSpec
-      Test.Wire.API.Federation.Golden.LeaveConversationRequest
-      Test.Wire.API.Federation.Golden.LeaveConversationResponse
-      Test.Wire.API.Federation.Golden.MessageSendResponse
-      Test.Wire.API.Federation.Golden.NewConnectionRequest
-      Test.Wire.API.Federation.Golden.NewConnectionResponse
-      Test.Wire.API.Federation.Golden.Runner
-      Paths_wire_api_federation
-  hs-source-dirs:
-      test
+    Main
+    Test.Wire.API.Federation.API.BrigSpec
+    Test.Wire.API.Federation.Golden.ConversationCreated
+    Test.Wire.API.Federation.Golden.ConversationUpdate
+    Test.Wire.API.Federation.Golden.GoldenSpec
+    Test.Wire.API.Federation.Golden.LeaveConversationRequest
+    Test.Wire.API.Federation.Golden.LeaveConversationResponse
+    Test.Wire.API.Federation.Golden.MessageSendResponse
+    Test.Wire.API.Federation.Golden.NewConnectionRequest
+    Test.Wire.API.Federation.Golden.NewConnectionResponse
+    Test.Wire.API.Federation.Golden.Runner
+
+  hs-source-dirs:     test
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -rtsopts -with-rtsopts=-N
-  build-tool-depends:
-      hspec-discover:hspec-discover
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -rtsopts -with-rtsopts=-N
+
+  build-tool-depends: hspec-discover:hspec-discover -any
   build-depends:
-      HUnit
-    , QuickCheck >=2.13
-    , aeson >=2.0.1.0
+      aeson                  >=2.0.1.0
     , aeson-pretty
     , async
-    , base >=4.6 && <5.0
+    , base                   >=4.6     && <5.0
     , bytestring
     , bytestring-conversion
     , case-insensitive
@@ -189,6 +198,7 @@ test-suite spec
     , http-media
     , http-types
     , http2
+    , HUnit
     , imports
     , kan-extensions
     , lens
@@ -196,9 +206,10 @@ test-suite spec
     , metrics-wai
     , mtl
     , network
+    , QuickCheck             >=2.13
     , retry
     , schema-profunctor
-    , servant >=0.16
+    , servant                >=0.16
     , servant-client
     , servant-client-core
     , servant-server
@@ -207,8 +218,8 @@ test-suite spec
     , streaming-commons
     , swagger2
     , template-haskell
-    , text >=0.11
-    , time >=1.8
+    , text                   >=0.11
+    , time                   >=1.8
     , time-manager
     , tls
     , transformers
@@ -217,4 +228,5 @@ test-suite spec
     , wai-utilities
     , wire-api
     , wire-api-federation
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
